[build-system]
requires = [ "poetry-core>=1.0.4",]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = [ "py37", "py38", "py39",]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.poetry]
name = "rasa"
version = "3.1.0"
description = "Open source machine learning framework to automate text- and voice-based conversations: NLU, dialogue management, connect to Slack, Facebook, and more - Create chatbots and voice assistants"
authors = [ "Rasa Technologies GmbH <hi@rasa.com>",]
maintainers = [ "Tom Bocklisch <tom@rasa.com>",]
homepage = "https://rasa.com"
repository = "https://github.com/rasahq/rasa"
documentation = "https://rasa.com/docs"
classifiers = [ "Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "License :: OSI Approved :: Apache Software License", "Topic :: Software Development :: Libraries",]
keywords = [ "nlp", "machine-learning", "machine-learning-library", "bot", "bots", "botkit", "rasa conversational-agents", "conversational-ai", "chatbot", "chatbot-framework", "bot-framework",]
include = [ "LICENSE.txt", "README.md", "rasa/shared/core/training_data/visualization.html", "rasa/cli/default_config.yml", "rasa/shared/importers/*", "rasa/utils/schemas/*", "rasa/keys",]
readme = "README.md"
license = "Apache-2.0"

[tool.towncrier]
package = "rasa"
package_dir = "rasa"
filename = "CHANGELOG.mdx"
directory = "./changelog"
underlines = "   "
title_format = "## [{version}] - {project_date}"
template = "./changelog/_template.md.jinja2"
start_string = "<!-- TOWNCRIER -->\n"
issue_format = "[#{issue}](https://github.com/rasahq/rasa/issues/{issue})"
[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "improvement"
name = "Improvements"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous internal changes"
showcontent = false

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
boto3 = "^1.22.0"
requests = "^2.27.1"
matplotlib = "3.3.4"
attrs = "21.2.0"
jsonpickle = "2.0.0"
redis = "^3.5.3"
numpy = "1.19.5"
scipy = "^1.7.3"
absl-py = "0.13.0"
apscheduler = "3.7.0"
tqdm = "^4.64.0"
networkx = "2.6.3"
fbmessenger = "~6.0.0"
pykwalify = "1.8.0"
coloredlogs = "15.0.1"
"ruamel.yaml" = "^0.16.13"
scikit-learn = "0.24.2"
slackclient = "^2.9.4"
twilio = "6.50.1"
webexteamssdk = "1.6"
mattermostwrapper = "~2.2"
rocketchat_API = "1.16.0"
colorhash = "~1.0.4"
jsonschema = "4.4.0"
packaging = "20.9"
pytz = "2021.3"
rasa-sdk = "~3.1.1"
colorclass = "~2.2.2"
terminaltables = "~3.1.10"
sanic = "~21.12.1"
sanic-cors = "^2.0.1"
sanic-jwt = "^1.7.0"
cloudpickle = "1.6.0"
aiohttp = "3.7.4"
questionary = "1.10.0"
prompt-toolkit = "^2.0.10"
python-socketio = "5.6.0"
python-engineio = "4.3.2"
pydot = "~1.4.2"
SQLAlchemy = "1.4.35"
sklearn-crfsuite = "~0.3.6"
psycopg2-binary = "2.9.3"
python-dateutil = "~2.8.2"
tensorflow = "~2.7.1"
tensorflow_hub = "~0.12.0"
tensorflow-addons = "~0.15.0"
setuptools = ">=41.0.0"
kafka-python = "2.0.2"
ujson = "4.3.0"
regex = "2021.8.28"
joblib = "1.0.1"
sentry-sdk = "1.3.1"
aio-pika = "^6.8.2"
pyTelegramBotAPI = "^3.8.3"
dask = "2021.11.2"
typing-extensions = "^3.10.0.2"
typing-utils = "^0.1.0"
tarsafe = "^0.0.3"
google-auth = "1.35.0"
CacheControl = "^0.12.11"
randomname = "^0.1.5"
sanic-routing = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.14.0"
pytest-xdist = "^2.5.0"
pytest = "^7.1.2"
freezegun = "^1.2.1"
responses = "^0.13.4"
aioresponses = "^0.7.3"
moto = "~2.2.20"
fakeredis = "^1.7.1"
mongomock = "^3.23.0"
black = "21.7b0"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
google-cloud-storage = "^1.44.0"
azure-storage-blob = "12.8.1"
coveralls = "^3.3.1"
towncrier = "^21.9.0"
toml = "^0.10.2"
pep440-version-utils = "^0.3.0"
pydoc-markdown = "^3.13.0"
pytest-timeout = "^1.4.2"
mypy = "^0.931"
bandit = "^1.7.4"
types-pkg-resources = "^0.1.3"
types-pytz = "^2021.3.6"
types-python-dateutil = "^2.8.12"
types-requests = "^2.27.20"
types-setuptools = "^57.4.14"
memory-profiler = "^0.58.0"
psutil = "^5.9.0"
mypy-extensions = "^0.4.3"
sanic-testing = "^0.8.2"
analytics-python = "^1.4.0"
datadog-api-client = "^1.10.0"
datadog = "^0.43.0"
types-redis = "^4.2.0"

[tool.poetry.extras]
spacy = [ "spacy",]
jieba = [ "jieba",]
transformers = [ "transformers", "sentencepiece",]
full = [ "spacy", "transformers", "sentencepiece", "jieba",]
gh-release-notes = [ "github3.py",]

[tool.poetry.scripts]
rasa = "rasa.__main__:main"

[tool.poetry.dependencies.PyJWT]
version = "^2.0.0"
extras = [ "crypto",]

[tool.poetry.dependencies.colorama]
version = "^0.4.4"
markers = "sys_platform == 'win32'"

[tool.poetry.dependencies.spacy]
version = "^3.1"
optional = true

[tool.poetry.dependencies.tensorflow-text]
version = "^2.7.0"
markers = "sys_platform!='win32'"

[tool.poetry.dependencies."github3.py"]
version = "~1.3.0"
optional = true

[tool.poetry.dependencies.transformers]
version = "~4.13.0"
optional = true

[tool.poetry.dependencies.sentencepiece]
version = "~0.1.96"
optional = true
extras = [ "sentencepiece",]

[tool.poetry.dependencies.jieba]
version = ">=0.39, <0.43"
optional = true

[tool.poetry.dependencies.pymongo]
version = ">=3.8,<3.11"
extras = [ "tls", "srv",]

[tool.poetry.dev-dependencies.pytest-sanic]
git = "https://github.com/wochinge/pytest-sanic"
branch = "fix-signal-issue"
